# MLops_SBT_Kopytov_1HW

./: .README.md.swo  .README.md.swp
.dvc/: config
1HW/: CMakeLists.txt  Dockerfile  README.md  bindings.cpp  linear_regression.cpp  setup.py  test_script.py
1HW/simple_linear_regression.egg-info/: PKG-INFO  SOURCES.txt
2HW/: .miy.py.swp  README.md  data_module.py  dataset.py  model_module.py  train.py
2HW/conf/: config.yaml  data.yaml  train.yaml
2HW/outputs/2024-12-11/17-42-46/.hydra/: config.yaml  hydra.yaml
2HW/outputs/2024-12-11/17-44-39/.hydra/: config.yaml  hydra.yaml
2HW/outputs/2024-12-11/17-47-46/.hydra/: hydra.yaml
2HW/outputs/2024-12-11/17-47-46/lightning_logs/version_0/: metrics.csv
2HW/outputs/2024-12-11/17-47-46/lightning_logs/version_0/checkpoints/: epoch=9-step=30.ckpt
2HW/outputs/2024-12-11/18-13-00/.hydra/: config.yaml  hydra.yaml
2HW/outputs/2024-12-11/18-13-00/checkpoints/: model-epoch=09-val_loss=117.25.ckpt
2HW/outputs/2024-12-11/18-13-00/lightning_logs/version_0/: metrics.csv
2HW/outputs/2024-12-11/18-16-49/.hydra/: hydra.yaml
2HW/outputs/2024-12-11/18-16-49/checkpoints/: model-epoch=09-val_loss=8.04.ckpt
2HW/outputs/2024-12-11/18-16-49/lightning_logs/version_0/: metrics.csv
